vlib/v/checker/tests/for-in-index-type.out
vlib/v/checker/tests/for-in-index-type.v:2:11: error: for in: cannot index `any_int` 
    1 | fn main() {
    2 |     for a in 52 {
      |              ~~
    3 |         println(a)
    4 |     }
